# Iris_Flower_Classification

./: README.md  main.py  pipeline.py  pyproject.toml  schema.py  utils.py
iris_flower_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
steps/: data_loader.py  data_prep.py  data_training.py  evaluate_model.py  predict_model.py
